--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "nodemon": "^1.12.1",
-    "socket.io": "^2.0.4"
+    "express-handlebars": "^3.0.0",
+    "nodemon": "^1.12.1"
   }
 }
