--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "nodemon": "^1.12.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arushshah/DJKhaaled"
   }
 }
