--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "request": "^2.83.0"
   },
   "repository": {
     "type": "git",
