--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "node-gyp": "^3.6.2",
     "nodemon": "^1.12.1",
     "player": "^0.6.1",
     "python-shell": "^0.4.0",
