--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nodemon": "^1.12.1",
     "player": "^0.6.1",
     "python-shell": "^0.4.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "underscore": "^1.8.3"
   },
   "repository": {
     "type": "git",
